Spatial Filters are added.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
         app:layout_constraintVertical_bias="1.0">
 
         <ImageView
-            android:id="@+id/image_view"
+            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center"
@@ -54,8 +54,8 @@
         android:text="@string/gray"
         android:textStyle="bold"
         android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="@id/frame"
         app:layout_constraintStart_toStartOf="@id/frame"
+        app:layout_constraintBottom_toTopOf="@id/guideline3"
         tools:visibility="visible" />
 
     <TextView
@@ -68,20 +68,152 @@
         android:text="@string/rgb"
         android:textStyle="bold"
         android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="@id/frame"
+        app:layout_constraintBottom_toTopOf="@id/guideline3"
         app:layout_constraintEnd_toEndOf="@id/frame"
         tools:visibility="visible" />
 
-    <View
-        android:id="@+id/view_separatorLine_horizontal"
+    <HorizontalScrollView
+        android:id="@+id/horizontalScrollView_processes"
         android:layout_width="0dp"
-        android:layout_height="5dp"
-        android:layout_marginTop="@dimen/margin_medium"
-        android:background="@drawable/shadow_background"
-        android:visibility="visible"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/margin_small"
+        android:scrollbars="none"
         app:layout_constraintEnd_toEndOf="@id/frame"
         app:layout_constraintStart_toStartOf="@id/frame"
-        app:layout_constraintTop_toBottomOf="@id/button_rgbToHsi" />
+        app:layout_constraintTop_toBottomOf="@id/guideline3">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <ImageButton
+                android:id="@+id/imageButton_reflect_y_axis"
+                style="@style/normalButtonStyle"
+                android:padding="@dimen/padding_medium"
+                android:background="@color/transparent"
+                android:contentDescription="@string/reflect_on_y_axis"
+                android:src="@drawable/ic_flip"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <ImageButton
+                android:id="@+id/imageButton_reflect_x_axis"
+                style="@style/normalButtonStyle"
+                android:background="@color/transparent"
+                android:contentDescription="@string/reflect_on_x_axis"
+                android:padding="@dimen/padding_medium"
+                android:rotation="270"
+                android:src="@drawable/ic_flip"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@id/imageButton_reflect_y_axis"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <ImageButton
+                android:id="@+id/imageButton_resize"
+                style="@style/normalButtonStyle"
+                android:background="@drawable/image_button_unselected_background"
+                android:contentDescription="@string/resize_image"
+                android:padding="@dimen/padding_medium"
+                android:src="@drawable/ic_photo_resize_24"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@id/imageButton_reflect_x_axis"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <ImageButton
+                android:id="@+id/imageButton_crop"
+                style="@style/normalButtonStyle"
+                android:background="@drawable/image_button_unselected_background"
+                android:contentDescription="@string/crop_image"
+                android:padding="@dimen/padding_medium"
+                android:src="@drawable/ic_crop_24"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@id/imageButton_resize"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <ImageButton
+                android:id="@+id/imageButton_pixelate"
+                style="@style/normalButtonStyle"
+                android:padding="@dimen/padding_medium"
+                android:background="@drawable/image_button_unselected_background"
+                android:contentDescription="@string/pixelate_image"
+                android:src="@drawable/ic_pixelate_24"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@id/imageButton_crop"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <Button
+                android:id="@+id/button_rgbToHsi"
+                style="@style/normalButtonStyle"
+                android:text="@string/rgb_to_hsi"
+                android:textColor="@color/colorPrimaryVariant"
+                android:textSize="@dimen/textSize_small"
+                app:backgroundTint="@color/white"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@id/imageButton_pixelate"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <Button
+                android:id="@+id/button_rgbToHsv"
+                style="@style/normalButtonStyle"
+                android:text="@string/rgb_to_hsv"
+                android:textColor="@color/colorPrimaryVariant"
+                android:textSize="@dimen/textSize_small"
+                app:backgroundTint="@color/white"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@id/button_rgbToHsi"
+                app:layout_constraintTop_toTopOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </HorizontalScrollView>
+
+    <HorizontalScrollView
+        android:id="@+id/horizontalScrollView_filters"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/margin_small"
+        android:scrollbars="none"
+        app:layout_constraintEnd_toEndOf="@id/frame"
+        app:layout_constraintStart_toStartOf="@id/frame"
+        app:layout_constraintTop_toBottomOf="@id/view_separatorLine_horizontal2">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <Button
+                android:id="@+id/button_minFilter"
+                style="@style/normalButtonStyle"
+                android:text="@string/min_filter"
+                android:textColor="@color/colorPrimaryVariant"
+                android:textSize="@dimen/textSize_small"
+                app:backgroundTint="@color/white"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <Button
+                android:id="@+id/button_maxFilter"
+                style="@style/normalButtonStyle"
+                android:text="@string/max_filter"
+                android:textColor="@color/colorPrimaryVariant"
+                android:textSize="@dimen/textSize_small"
+                app:backgroundTint="@color/white"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@id/button_minFilter"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <Button
+                android:id="@+id/button_medianFilter"
+                style="@style/normalButtonStyle"
+                android:text="@string/median_filter"
+                android:textColor="@color/colorPrimaryVariant"
+                android:textSize="@dimen/textSize_small"
+                app:backgroundTint="@color/white"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@id/button_maxFilter"
+                app:layout_constraintTop_toTopOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </HorizontalScrollView>
 
     <View
         android:id="@+id/view_separatorLine_vertical"
@@ -92,8 +224,42 @@
         app:layout_constraintBottom_toTopOf="@id/button_process"
         app:layout_constraintEnd_toEndOf="@id/guideline4"
         app:layout_constraintStart_toStartOf="@id/guideline4"
-        app:layout_constraintTop_toBottomOf="@id/view_separatorLine_horizontal"
+        app:layout_constraintTop_toBottomOf="@id/view_separatorLine_horizontal3"
         tools:visibility="visible" />
+
+    <View
+        android:id="@+id/view_separatorLine_horizontal1"
+        android:layout_width="0dp"
+        android:layout_height="2dp"
+        android:layout_marginTop="@dimen/margin_medium"
+        android:background="@color/gray_level_6"
+        android:visibility="visible"
+        app:layout_constraintEnd_toEndOf="@id/frame"
+        app:layout_constraintStart_toStartOf="@id/frame"
+        app:layout_constraintTop_toTopOf="@id/guideline3"
+        app:layout_constraintBottom_toBottomOf="@id/guideline3"/>
+
+    <View
+        android:id="@+id/view_separatorLine_horizontal2"
+        android:layout_width="0dp"
+        android:layout_height="2dp"
+        android:background="@color/gray_level_6"
+        android:visibility="visible"
+        android:layout_marginTop="@dimen/margin_small"
+        app:layout_constraintEnd_toEndOf="@id/frame"
+        app:layout_constraintStart_toStartOf="@id/frame"
+        app:layout_constraintTop_toBottomOf="@id/horizontalScrollView_processes" />
+
+    <View
+        android:id="@+id/view_separatorLine_horizontal3"
+        android:layout_width="0dp"
+        android:layout_height="5dp"
+        android:layout_marginTop="@dimen/margin_small"
+        android:background="@drawable/shadow_background"
+        android:visibility="visible"
+        app:layout_constraintEnd_toEndOf="@id/frame"
+        app:layout_constraintStart_toStartOf="@id/frame"
+        app:layout_constraintTop_toBottomOf="@id/horizontalScrollView_filters" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline3"
@@ -161,101 +327,13 @@
             app:backgroundTint="@color/white" />
     </FrameLayout>
 
-    <ImageButton
-        android:id="@+id/imageButton_reflect_y_axis"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@color/transparent"
-        android:contentDescription="@string/reflect_on_y_axis"
-        android:padding="@dimen/padding_medium"
-        android:src="@drawable/ic_flip"
-        app:layout_constraintEnd_toStartOf="@id/imageButton_reflect_x_axis"
-        app:layout_constraintStart_toStartOf="@id/frame"
-        app:layout_constraintTop_toBottomOf="@id/guideline3" />
-
-    <ImageButton
-        android:id="@+id/imageButton_reflect_x_axis"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@color/transparent"
-        android:contentDescription="@string/reflect_on_x_axis"
-        android:padding="@dimen/padding_medium"
-        android:rotation="270"
-        android:src="@drawable/ic_flip"
-        app:layout_constraintEnd_toStartOf="@id/imageButton_resize"
-        app:layout_constraintStart_toEndOf="@id/imageButton_reflect_y_axis"
-        app:layout_constraintTop_toBottomOf="@id/guideline3" />
-
-    <ImageButton
-        android:id="@+id/imageButton_resize"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/image_button_unselected_background"
-        android:contentDescription="@string/resize_image"
-        android:padding="@dimen/padding_medium"
-        android:src="@drawable/ic_photo_resize_24"
-        app:layout_constraintEnd_toStartOf="@id/imageButton_crop"
-        app:layout_constraintStart_toEndOf="@id/imageButton_reflect_x_axis"
-        app:layout_constraintTop_toBottomOf="@id/guideline3" />
-
-    <ImageButton
-        android:id="@+id/imageButton_crop"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/image_button_unselected_background"
-        android:contentDescription="@string/crop_image"
-        android:padding="@dimen/padding_medium"
-        android:src="@drawable/ic_crop_24"
-        app:layout_constraintEnd_toStartOf="@id/imageButton_pixelate"
-        app:layout_constraintStart_toEndOf="@id/imageButton_resize"
-        app:layout_constraintTop_toBottomOf="@id/guideline3" />
-
-    <ImageButton
-        android:id="@+id/imageButton_pixelate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/image_button_unselected_background"
-        android:contentDescription="@string/pixelate_image"
-        android:padding="@dimen/padding_medium"
-        android:src="@drawable/ic_pixelate_24"
-        app:layout_constraintEnd_toEndOf="@id/frame"
-        app:layout_constraintStart_toEndOf="@id/imageButton_crop"
-        app:layout_constraintTop_toBottomOf="@id/guideline3" />
-
-    <Button
-        android:id="@+id/button_rgbToHsi"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_medium"
-        android:text="@string/rgb_to_hsi"
-        android:textColor="@color/colorPrimaryVariant"
-        android:textSize="@dimen/textSize_small"
-        app:backgroundTint="@color/white"
-        app:layout_constraintEnd_toStartOf="@id/button_rgbToHsv"
-        app:layout_constraintStart_toStartOf="@id/frame"
-        app:layout_constraintTop_toBottomOf="@id/imageButton_reflect_y_axis" />
-
-    <Button
-        android:id="@+id/button_rgbToHsv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_medium"
-        android:text="@string/rgb_to_hsv"
-        android:textColor="@color/colorPrimaryVariant"
-        android:textSize="@dimen/textSize_small"
-
-        app:backgroundTint="@color/white"
-        app:layout_constraintEnd_toEndOf="@id/frame"
-        app:layout_constraintStart_toEndOf="@id/button_rgbToHsi"
-        app:layout_constraintTop_toBottomOf="@id/imageButton_pixelate" />
-
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textInputLayout_width"
         style="@style/textInputLayoutStyle"
         android:hint="@string/width"
         android:visibility="gone"
         app:layout_constraintEnd_toStartOf="@id/guideline4"
-        app:layout_constraintTop_toBottomOf="@id/view_separatorLine_horizontal"
+        app:layout_constraintTop_toBottomOf="@id/view_separatorLine_horizontal3"
         tools:visibility="visible">
 
         <com.google.android.material.textfield.TextInputEditText
@@ -270,7 +348,7 @@
         android:hint="@string/height"
         android:visibility="gone"
         app:layout_constraintStart_toEndOf="@id/guideline4"
-        app:layout_constraintTop_toBottomOf="@id/view_separatorLine_horizontal"
+        app:layout_constraintTop_toBottomOf="@id/view_separatorLine_horizontal3"
         tools:visibility="visible">
 
         <com.google.android.material.textfield.TextInputEditText
@@ -285,7 +363,7 @@
         android:hint="@string/fromx"
         android:visibility="gone"
         app:layout_constraintEnd_toStartOf="@id/textInputLayout_fromY"
-        app:layout_constraintTop_toBottomOf="@id/view_separatorLine_horizontal">
+        app:layout_constraintTop_toBottomOf="@id/view_separatorLine_horizontal2">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/textInputEditText_fromX"
@@ -299,7 +377,7 @@
         android:hint="@string/fromy"
         android:visibility="gone"
         app:layout_constraintEnd_toStartOf="@id/guideline4"
-        app:layout_constraintTop_toBottomOf="@id/view_separatorLine_horizontal">
+        app:layout_constraintTop_toBottomOf="@id/view_separatorLine_horizontal2">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/textInputEditText_fromY"
@@ -313,7 +391,7 @@
         android:hint="@string/tox"
         android:visibility="gone"
         app:layout_constraintStart_toEndOf="@id/guideline4"
-        app:layout_constraintTop_toBottomOf="@id/view_separatorLine_horizontal">
+        app:layout_constraintTop_toBottomOf="@id/view_separatorLine_horizontal2">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/textInputEditText_toX"
@@ -327,7 +405,7 @@
         android:hint="@string/toy"
         android:visibility="gone"
         app:layout_constraintStart_toEndOf="@id/textInputLayout_toX"
-        app:layout_constraintTop_toBottomOf="@id/view_separatorLine_horizontal">
+        app:layout_constraintTop_toBottomOf="@id/view_separatorLine_horizontal2">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/textInputEditText_toY"
