--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="gray_level_4">#AFAFAF</color>
     <color name="gray_level_5">#C8C8C8</color>
+    <color name="gray_level_6">#E1E1E1</color>
     <color name="gray_level_7">#F0F0F0</color>
 
     <color name="transparent">#00000000</color>
