--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="margin_medium">10dp</dimen>
-    <dimen name="margin_large">18dp</dimen>
+    <dimen name="margin_small">4dp</dimen>
+    <dimen name="margin_medium">8dp</dimen>
+    <dimen name="margin_large">16dp</dimen>
     <dimen name="margin_x_large">24dp</dimen>
     <dimen name="margin_xx_large">36dp</dimen>
     <dimen name="margin_xxx_large">48dp</dimen>
