--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,6 +12,7 @@
 
     <dimen name="textSize_small">12sp</dimen>
     <dimen name="textSize_medium">14sp</dimen>
+    <dimen name="textSize_large">16sp</dimen>
     <dimen name="textInputLayout_width">80dp</dimen>
 
 </resources>
