Highpass / Lowpass filters UI and Android code added.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -192,6 +192,28 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <Button
+                android:id="@+id/button_lowPassFilter"
+                style="@style/normalButtonStyle"
+                android:text="@string/low_pass_filter"
+                android:textColor="@color/colorPrimaryVariant"
+                android:textSize="@dimen/textSize_small"
+                app:backgroundTint="@color/white"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@id/button_lungSegmentation"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <Button
+                android:id="@+id/button_highPassFilter"
+                style="@style/normalButtonStyle"
+                android:text="@string/high_pass_filter"
+                android:textColor="@color/colorPrimaryVariant"
+                android:textSize="@dimen/textSize_small"
+                app:backgroundTint="@color/white"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@id/button_lowPassFilter"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <Button
                 android:id="@+id/button_minFilter"
                 style="@style/normalButtonStyle"
                 android:text="@string/min_filter"
@@ -199,7 +221,7 @@
                 android:textSize="@dimen/textSize_small"
                 app:backgroundTint="@color/white"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@id/button_lungSegmentation"
+                app:layout_constraintStart_toEndOf="@id/button_highPassFilter"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <Button
