--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -315,6 +315,51 @@
         tools:visibility="visible" />
 
     <TextView
+        android:id="@+id/textView_timingTitle"
+        style="@style/classificationInfoTextStyle"
+        android:text="@string/timing"
+        android:textStyle="bold"
+        app:layout_constraintTop_toBottomOf="@id/button_process"
+        app:layout_constraintBottom_toTopOf="@id/textView_analyzeResult"
+        app:layout_constraintEnd_toStartOf="@id/textView_timingText"
+        app:layout_constraintStart_toStartOf="@id/textView_analyzeResult"
+        tools:visibility="visible" />
+
+    <TextView
+        android:id="@+id/textView_timingText"
+        style="@style/classificationInfoTextStyle"
+        android:layout_marginEnd="@dimen/margin_medium"
+        app:layout_constraintBottom_toBottomOf="@id/textView_timingTitle"
+        app:layout_constraintEnd_toStartOf="@id/textView_confidenceTitle"
+        app:layout_constraintStart_toEndOf="@id/textView_timingTitle"
+        app:layout_constraintTop_toTopOf="@id/textView_timingTitle"
+        tools:text=" timing"
+        tools:visibility="visible" />
+
+    <TextView
+        android:id="@+id/textView_confidenceTitle"
+        style="@style/classificationInfoTextStyle"
+        android:layout_marginStart="@dimen/margin_medium"
+        android:text="@string/confidence"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@id/textView_timingTitle"
+        app:layout_constraintEnd_toStartOf="@id/textView_confidenceText"
+        app:layout_constraintStart_toEndOf="@id/textView_timingText"
+        app:layout_constraintTop_toTopOf="@id/textView_timingTitle"
+        tools:visibility="visible" />
+
+    <TextView
+        android:id="@+id/textView_confidenceText"
+        style="@style/classificationInfoTextStyle"
+        android:layout_marginEnd="@dimen/margin_small"
+        app:layout_constraintBottom_toBottomOf="@id/textView_confidenceTitle"
+        app:layout_constraintEnd_toEndOf="@id/textView_analyzeResult"
+        app:layout_constraintStart_toEndOf="@id/textView_confidenceTitle"
+        app:layout_constraintTop_toTopOf="@id/textView_confidenceTitle"
+        tools:text=" 60%"
+        tools:visibility="visible" />
+
+    <TextView
         android:id="@+id/textView_analyzeResult"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -336,9 +381,11 @@
         android:layout_height="10dp"
         android:background="@drawable/circular_green_indicator"
         android:importantForAccessibility="no"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@id/textView_analyzeResult"
         app:layout_constraintEnd_toStartOf="@id/textView_analyzeResult"
-        app:layout_constraintTop_toTopOf="@id/textView_analyzeResult" />
+        app:layout_constraintTop_toTopOf="@id/textView_analyzeResult"
+        tools:visibility="visible" />
 
     <Button
         android:id="@+id/button_analyze"
